--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 keywords = ["plunet", "api", "translation", "localization", "tms"]
 dependencies = [
-    "plunetapi"
+    "plunetapi>=0.2", "pydantic>=1.10"
 ]
 requires-python = ">=3.9"
 
