--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,9 @@ lxml==4.9.1
     # via zeep
 platformdirs==2.6.0
     # via zeep
-plunetapi==0.1.1
+plunetapi==0.2
     # via pyplunet (pyproject.toml)
+pydantic>=1.10
 pytz==2022.6
     # via zeep
 requests==2.28.1
