--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 keywords = ["plunet", "api", "translation", "localization", "tms"]
 dependencies = [
-    "plunetapi>=0.3", "pydantic>=1.10"
+    "plunetapi>=0.4", "pydantic>=2.0.0,<3.0.0"
 ]
 requires-python = ">=3.9"
 
